frontend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: traefik
  rules:
    - host: frontend.app.fastapi
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - frontend.app.fastapi
      secretName: frontend-tls
